--- a/src/Components/AppHeader.css
+++ b/src/Components/AppHeader.css
@@ -96,4 +96,12 @@
     font-weight: 500;
     text-decoration: underline;
   }
+  .navbar-nav .nav-link {
+    font-weight: 500;
+    color: #333;
+  }
+  
+  .navbar-nav .nav-link:hover {
+    color: #0d6efd;
+  }
   
